// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex 1`] = `
{
  "$id": "complex",
  "additionalProperties": false,
  "properties": {
    "anyArray": {
      "items": {},
      "type": "array",
    },
    "anyObject": {
      "additionalProperties": true,
      "type": "object",
    },
    "anyObject2": {
      "anyOf": [
        {
          "type": "null",
        },
        {
          "additionalProperties": true,
          "type": "object",
        },
      ],
    },
    "anyString": {},
    "object": {
      "additionalProperties": true,
      "type": "object",
    },
    "object2": {
      "anyOf": [
        {
          "type": "null",
        },
        {
          "additionalProperties": true,
          "type": "object",
        },
      ],
    },
  },
  "required": [
    "object",
    "anyObject",
    "anyString",
    "anyArray",
  ],
  "type": "object",
}
`;

exports[`simple array 1`] = `
{
  "$id": "simple",
  "additionalProperties": false,
  "items": {
    "$id": undefined,
    "additionalProperties": false,
    "properties": {
      "checked": {
        "type": "boolean",
      },
    },
    "required": [
      "checked",
    ],
    "type": "object",
  },
  "type": "array",
}
`;

exports[`simple interface 1`] = `
{
  "$id": "simple",
  "additionalProperties": false,
  "properties": {
    "checked": {
      "type": "boolean",
    },
  },
  "required": [
    "checked",
  ],
  "type": "object",
}
`;

exports[`simple interface with undefined and null 1`] = `
{
  "$id": "simpleUndefinedNull",
  "additionalProperties": false,
  "properties": {
    "checked": {
      "anyOf": [
        {
          "type": "null",
        },
        {
          "type": "boolean",
        },
      ],
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`simple nested 1`] = `
{
  "$id": "simpleNested",
  "additionalProperties": false,
  "properties": {
    "checked": {
      "anyOf": [
        {
          "type": "null",
        },
        {
          "$id": undefined,
          "additionalProperties": false,
          "properties": {
            "id": {
              "type": "number",
            },
          },
          "required": [
            "id",
          ],
          "type": "object",
        },
      ],
    },
  },
  "required": [],
  "type": "object",
}
`;
